crates/toml_edit/fixtures/invalid/inline-table/linebreak-1.stderr
TOML parse error at line 3, column 18
  |
3 | simple = { a = 1 
  |                  ^
Invalid inline table
Expected `}`
